reference/5.1/Microsoft.PowerShell.Management/Rename-ItemProperty.md
---
external help file: Microsoft.PowerShell.Commands.Management.dll-Help.xml
keywords: powershell, cmdlet
Locale: en-US
Module Name: Microsoft.PowerShell.Management
ms.date: 10/18/2018
online version: https://docs.microsoft.com/powershell/module/microsoft.powershell.management/rename-itemproperty?view=powershell-5.1&WT.mc_id=ps-gethelp
schema: 2.0.0
title: Rename-ItemProperty
ms.openlocfilehash: 5cbd228f78da3bf7fa70a001391bc98f63085a73
ms.sourcegitcommit: 9b28fb9a3d72655bb63f62af18b3a5af6a05cd3f
ms.translationtype: MT
ms.contentlocale: pt-BR
ms.lasthandoff: 07/07/2020
ms.locfileid: "93193949"
---
# <span data-ttu-id="f62ce-103">Rename-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-103">Rename-ItemProperty</span></span>

## <span data-ttu-id="f62ce-104">SINOPSE</span><span class="sxs-lookup"><span data-stu-id="f62ce-104">SYNOPSIS</span></span>
<span data-ttu-id="f62ce-105">Renomeia uma propriedade de um item.</span><span class="sxs-lookup"><span data-stu-id="f62ce-105">Renames a property of an item.</span></span>

## <span data-ttu-id="f62ce-106">SYNTAX</span><span class="sxs-lookup"><span data-stu-id="f62ce-106">SYNTAX</span></span>

### <span data-ttu-id="f62ce-107">Caminho (padrão)</span><span class="sxs-lookup"><span data-stu-id="f62ce-107">Path (Default)</span></span>

```
Rename-ItemProperty [-Path] <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

### <span data-ttu-id="f62ce-108">LiteralPath</span><span class="sxs-lookup"><span data-stu-id="f62ce-108">LiteralPath</span></span>

```
Rename-ItemProperty -LiteralPath <String> [-Name] <String> [-NewName] <String> [-PassThru] [-Force]
 [-Filter <String>] [-Include <String[]>] [-Exclude <String[]>] [-Credential <PSCredential>] [-WhatIf]
 [-Confirm] [-UseTransaction] [<CommonParameters>]
```

## <span data-ttu-id="f62ce-109">DESCRIPTION</span><span class="sxs-lookup"><span data-stu-id="f62ce-109">DESCRIPTION</span></span>

<span data-ttu-id="f62ce-110">O `Rename-ItemProperty` cmdlet altera o nome de uma propriedade de item especificada.</span><span class="sxs-lookup"><span data-stu-id="f62ce-110">The `Rename-ItemProperty` cmdlet changes the name of a specified item property.</span></span>
<span data-ttu-id="f62ce-111">O valor da propriedade não é alterado.</span><span class="sxs-lookup"><span data-stu-id="f62ce-111">The value of the property is not changed.</span></span>
<span data-ttu-id="f62ce-112">Por exemplo, você pode usar `Rename-ItemProperty` para alterar o nome de uma entrada de registro.</span><span class="sxs-lookup"><span data-stu-id="f62ce-112">For example, you can use `Rename-ItemProperty` to change the name of a registry entry.</span></span>

## <span data-ttu-id="f62ce-113">EXEMPLOS</span><span class="sxs-lookup"><span data-stu-id="f62ce-113">EXAMPLES</span></span>

### <span data-ttu-id="f62ce-114">Exemplo 1: renomear uma entrada de registro</span><span class="sxs-lookup"><span data-stu-id="f62ce-114">Example 1: Rename a registry entry</span></span>

<span data-ttu-id="f62ce-115">Esse comando renomeia a entrada do registro de configuração que está contida na chave "HKEY_LOCAL_MACHINE\Software\SmpApplication" para "oldconfig".</span><span class="sxs-lookup"><span data-stu-id="f62ce-115">This command renames the config registry entry that is contained in the "HKEY_LOCAL_MACHINE\Software\SmpApplication" key to "oldconfig".</span></span>

```powershell
Rename-ItemProperty -Path HKLM:\Software\SmpApplication -Name config -NewName oldconfig
```

## <span data-ttu-id="f62ce-116">PARAMETERS</span><span class="sxs-lookup"><span data-stu-id="f62ce-116">PARAMETERS</span></span>

### <span data-ttu-id="f62ce-117">-Credential</span><span class="sxs-lookup"><span data-stu-id="f62ce-117">-Credential</span></span>

<span data-ttu-id="f62ce-118">Especifica uma conta de usuário que tem permissão para executar esta ação.</span><span class="sxs-lookup"><span data-stu-id="f62ce-118">Specifies a user account that has permission to perform this action.</span></span>
<span data-ttu-id="f62ce-119">O padrão é o usuário atual.</span><span class="sxs-lookup"><span data-stu-id="f62ce-119">The default is the current user.</span></span>

<span data-ttu-id="f62ce-120">Digite um nome de usuário, como "User01" ou "Domínio01 \ Usuário01", ou insira um objeto **PSCredential** , como um gerado pelo `Get-Credential` cmdlet.</span><span class="sxs-lookup"><span data-stu-id="f62ce-120">Type a user name, such as "User01" or "Domain01\User01", or enter a **PSCredential** object, such as one generated by the `Get-Credential` cmdlet.</span></span>
<span data-ttu-id="f62ce-121">Se você digitar um nome de usuário, uma senha será solicitada.</span><span class="sxs-lookup"><span data-stu-id="f62ce-121">If you type a user name, you are prompted for a password.</span></span>

> [!WARNING]
> <span data-ttu-id="f62ce-122">Nenhum provedor instalado com o Windows PowerShell dá suporte a esse parâmetro.</span><span class="sxs-lookup"><span data-stu-id="f62ce-122">This parameter is not supported by any providers installed with Windows PowerShell.</span></span>

```yaml
Type: System.Management.Automation.PSCredential
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: Current user
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-123">-Excluir</span><span class="sxs-lookup"><span data-stu-id="f62ce-123">-Exclude</span></span>

<span data-ttu-id="f62ce-124">Especifica os itens que esse cmdlet omite.</span><span class="sxs-lookup"><span data-stu-id="f62ce-124">Specifies items that this cmdlet omits.</span></span>
<span data-ttu-id="f62ce-125">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="f62ce-125">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="f62ce-126">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="f62ce-126">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="f62ce-127">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="f62ce-127">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="f62ce-128">-Filter</span><span class="sxs-lookup"><span data-stu-id="f62ce-128">-Filter</span></span>

<span data-ttu-id="f62ce-129">Especifica um filtro no formato ou idioma do provedor.</span><span class="sxs-lookup"><span data-stu-id="f62ce-129">Specifies a filter in the format or language of the provider.</span></span>
<span data-ttu-id="f62ce-130">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="f62ce-130">The value of this parameter qualifies the **Path** parameter.</span></span>

<span data-ttu-id="f62ce-131">A sintaxe do filtro, incluindo o uso de caracteres curinga, depende do provedor.</span><span class="sxs-lookup"><span data-stu-id="f62ce-131">The syntax of the filter, including the use of wildcard characters, depends on the provider.</span></span>
<span data-ttu-id="f62ce-132">Os filtros são mais eficientes do que outros parâmetros, porque o provedor os aplica quando o cmdlet obtém os objetos em vez de fazer com que o PowerShell filtre os objetos depois que eles são recuperados.</span><span class="sxs-lookup"><span data-stu-id="f62ce-132">Filters are more efficient than other parameters, because the provider applies them when the cmdlet gets the objects rather than having PowerShell filter the objects after they are retrieved.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="f62ce-133">-Force</span><span class="sxs-lookup"><span data-stu-id="f62ce-133">-Force</span></span>

<span data-ttu-id="f62ce-134">Força o cmdlet a renomear uma propriedade de um objeto que, de outra forma, não pode ser acessado pelo usuário.</span><span class="sxs-lookup"><span data-stu-id="f62ce-134">Forces the cmdlet to rename a property of an object that cannot otherwise be accessed by the user.</span></span>
<span data-ttu-id="f62ce-135">A implementação varia de provedor para provedor.</span><span class="sxs-lookup"><span data-stu-id="f62ce-135">Implementation varies from provider to provider.</span></span>
<span data-ttu-id="f62ce-136">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="f62ce-136">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-137">-Incluir</span><span class="sxs-lookup"><span data-stu-id="f62ce-137">-Include</span></span>

<span data-ttu-id="f62ce-138">Especifica somente os itens sobre os quais o cmdlet atua, excluindo todos os outros.</span><span class="sxs-lookup"><span data-stu-id="f62ce-138">Specifies only those items upon which the cmdlet acts, excluding all others.</span></span>
<span data-ttu-id="f62ce-139">O valor deste parâmetro qualifica o parâmetro **Path** .</span><span class="sxs-lookup"><span data-stu-id="f62ce-139">The value of this parameter qualifies the **Path** parameter.</span></span>
<span data-ttu-id="f62ce-140">Insira um padrão ou elemento de caminho, como "\*.txt".</span><span class="sxs-lookup"><span data-stu-id="f62ce-140">Enter a path element or pattern, such as "\*.txt".</span></span>
<span data-ttu-id="f62ce-141">Caracteres curinga são permitidos.</span><span class="sxs-lookup"><span data-stu-id="f62ce-141">Wildcard characters are permitted.</span></span>

```yaml
Type: System.String[]
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: True
```

### <span data-ttu-id="f62ce-142">-LiteralPath</span><span class="sxs-lookup"><span data-stu-id="f62ce-142">-LiteralPath</span></span>

<span data-ttu-id="f62ce-143">Especifica um caminho da propriedade item.</span><span class="sxs-lookup"><span data-stu-id="f62ce-143">Specifies a path of the item property.</span></span>
<span data-ttu-id="f62ce-144">Ao contrário do parâmetro **Path** , o valor de **LiteralPath** é usado exatamente como digitado.</span><span class="sxs-lookup"><span data-stu-id="f62ce-144">Unlike the **Path** parameter, the value of **LiteralPath** is used exactly as it is typed.</span></span>
<span data-ttu-id="f62ce-145">Nenhum caractere é interpretado como caractere curinga.</span><span class="sxs-lookup"><span data-stu-id="f62ce-145">No characters are interpreted as wildcards.</span></span>
<span data-ttu-id="f62ce-146">Se o caminho incluir caracteres de escape, coloque-o entre aspas simples.</span><span class="sxs-lookup"><span data-stu-id="f62ce-146">If the path includes escape characters, enclose it in single quotation marks.</span></span>
<span data-ttu-id="f62ce-147">Aspas simples instruem o PowerShell a não interpretar nenhum caractere como sequências de escape.</span><span class="sxs-lookup"><span data-stu-id="f62ce-147">Single quotation marks tell PowerShell not to interpret any characters as escape sequences.</span></span>

```yaml
Type: System.String
Parameter Sets: LiteralPath
Aliases: PSPath

Required: True
Position: Named
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-148">-Name</span><span class="sxs-lookup"><span data-stu-id="f62ce-148">-Name</span></span>

<span data-ttu-id="f62ce-149">Especifica o nome atual da propriedade a ser renomeada.</span><span class="sxs-lookup"><span data-stu-id="f62ce-149">Specifies the current name of the property to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases: PSProperty

Required: True
Position: 1
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-150">-NewName</span><span class="sxs-lookup"><span data-stu-id="f62ce-150">-NewName</span></span>

<span data-ttu-id="f62ce-151">Especifica o novo nome da propriedade.</span><span class="sxs-lookup"><span data-stu-id="f62ce-151">Specifies the new name for the property.</span></span>

```yaml
Type: System.String
Parameter Sets: (All)
Aliases:

Required: True
Position: 2
Default value: None
Accept pipeline input: True (ByPropertyName)
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-152">-PassThru</span><span class="sxs-lookup"><span data-stu-id="f62ce-152">-PassThru</span></span>

<span data-ttu-id="f62ce-153">Retorna um objeto que representa a propriedade do item.</span><span class="sxs-lookup"><span data-stu-id="f62ce-153">Returns an object that represents the item property.</span></span>
<span data-ttu-id="f62ce-154">Por padrão, este cmdlet não gera saída.</span><span class="sxs-lookup"><span data-stu-id="f62ce-154">By default, this cmdlet does not generate any output.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-155">-Path</span><span class="sxs-lookup"><span data-stu-id="f62ce-155">-Path</span></span>

<span data-ttu-id="f62ce-156">Especifica o caminho do item a ser renomeado.</span><span class="sxs-lookup"><span data-stu-id="f62ce-156">Specifies the path of the item to rename.</span></span>

```yaml
Type: System.String
Parameter Sets: Path
Aliases:

Required: True
Position: 0
Default value: None
Accept pipeline input: True (ByPropertyName, ByValue)
Accept wildcard characters: True
```

### <span data-ttu-id="f62ce-157">-UseTransaction</span><span class="sxs-lookup"><span data-stu-id="f62ce-157">-UseTransaction</span></span>

<span data-ttu-id="f62ce-158">Inclui o comando na transação ativa.</span><span class="sxs-lookup"><span data-stu-id="f62ce-158">Includes the command in the active transaction.</span></span>
<span data-ttu-id="f62ce-159">Este parâmetro é válido somente quando uma transação está em andamento.</span><span class="sxs-lookup"><span data-stu-id="f62ce-159">This parameter is valid only when a transaction is in progress.</span></span>
<span data-ttu-id="f62ce-160">Para obter mais informações, consulte [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span><span class="sxs-lookup"><span data-stu-id="f62ce-160">For more information, see [about_Transactions](../Microsoft.PowerShell.Core/About/about_Transactions.md).</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: usetx

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-161">-Confirm</span><span class="sxs-lookup"><span data-stu-id="f62ce-161">-Confirm</span></span>

<span data-ttu-id="f62ce-162">Solicita sua confirmação antes de executar o cmdlet.</span><span class="sxs-lookup"><span data-stu-id="f62ce-162">Prompts you for confirmation before running the cmdlet.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-163">-WhatIf</span><span class="sxs-lookup"><span data-stu-id="f62ce-163">-WhatIf</span></span>

<span data-ttu-id="f62ce-164">Mostra o que aconteceria se o cmdlet fosse executado.</span><span class="sxs-lookup"><span data-stu-id="f62ce-164">Shows what would happen if the cmdlet runs.</span></span>
<span data-ttu-id="f62ce-165">O cmdlet não é executado.</span><span class="sxs-lookup"><span data-stu-id="f62ce-165">The cmdlet is not run.</span></span>

```yaml
Type: System.Management.Automation.SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### <span data-ttu-id="f62ce-166">CommonParameters</span><span class="sxs-lookup"><span data-stu-id="f62ce-166">CommonParameters</span></span>

<span data-ttu-id="f62ce-167">Esse cmdlet oferece suporte aos parâmetros comuns:,,,,,, `-Debug` `-ErrorAction` `-ErrorVariable` `-InformationAction` `-InformationVariable` `-OutVariable` `-OutBuffer` , `-PipelineVariable` , `-Verbose` , `-WarningAction` e `-WarningVariable` .</span><span class="sxs-lookup"><span data-stu-id="f62ce-167">This cmdlet supports the common parameters: `-Debug`, `-ErrorAction`, `-ErrorVariable`, `-InformationAction`, `-InformationVariable`, `-OutVariable`, `-OutBuffer`, `-PipelineVariable`, `-Verbose`, `-WarningAction`, and `-WarningVariable`.</span></span> <span data-ttu-id="f62ce-168">Para obter mais informações, confira [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span><span class="sxs-lookup"><span data-stu-id="f62ce-168">For more information, see [about_CommonParameters](../Microsoft.PowerShell.Core/About/about_CommonParameters.md).</span></span>

## <span data-ttu-id="f62ce-169">ENTRADAS</span><span class="sxs-lookup"><span data-stu-id="f62ce-169">INPUTS</span></span>

### <span data-ttu-id="f62ce-170">System.String</span><span class="sxs-lookup"><span data-stu-id="f62ce-170">System.String</span></span>

<span data-ttu-id="f62ce-171">É possível canalizar uma cadeia de caracteres que contém um caminho, mas não um caminho literal, para esse cmdlet.</span><span class="sxs-lookup"><span data-stu-id="f62ce-171">You can pipe a string that contains a path, but not a literal path, to this cmdlet.</span></span>

## <span data-ttu-id="f62ce-172">SAÍDAS</span><span class="sxs-lookup"><span data-stu-id="f62ce-172">OUTPUTS</span></span>

### <span data-ttu-id="f62ce-173">Nenhum, System. Management. Automation. PSCustomObject</span><span class="sxs-lookup"><span data-stu-id="f62ce-173">None, System.Management.Automation.PSCustomObject</span></span>

<span data-ttu-id="f62ce-174">Esse cmdlet gera um **PSCustomObject** que representa a propriedade de item renomeada, se você especificar o parâmetro *PassThru* .</span><span class="sxs-lookup"><span data-stu-id="f62ce-174">This cmdlet generates a **PSCustomObject** that represents the renamed item property, if you specify the *PassThru* parameter.</span></span>
<span data-ttu-id="f62ce-175">Caso contrário, este cmdlet não gera nenhuma saída.</span><span class="sxs-lookup"><span data-stu-id="f62ce-175">Otherwise, this cmdlet does not generate any output.</span></span>

## <span data-ttu-id="f62ce-176">OBSERVAÇÕES</span><span class="sxs-lookup"><span data-stu-id="f62ce-176">NOTES</span></span>

<span data-ttu-id="f62ce-177">`Remove-ItemProperty` o é projetado para trabalhar com os dados expostos por qualquer provedor.</span><span class="sxs-lookup"><span data-stu-id="f62ce-177">`Remove-ItemProperty` is designed to work with the data exposed by any provider.</span></span> <span data-ttu-id="f62ce-178">Para listar os provedores disponíveis em sua sessão, digite `Get-PSProvider` .</span><span class="sxs-lookup"><span data-stu-id="f62ce-178">To list the providers available in your session, type `Get-PSProvider`.</span></span> <span data-ttu-id="f62ce-179">Para obter mais informações, consulte [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span><span class="sxs-lookup"><span data-stu-id="f62ce-179">For more information, see [about_Providers](../Microsoft.PowerShell.Core/About/about_Providers.md).</span></span>

## <span data-ttu-id="f62ce-180">LINKS RELACIONADOS</span><span class="sxs-lookup"><span data-stu-id="f62ce-180">RELATED LINKS</span></span>

[<span data-ttu-id="f62ce-181">Clear-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-181">Clear-ItemProperty</span></span>](Clear-ItemProperty.md)

[<span data-ttu-id="f62ce-182">Copy-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-182">Copy-ItemProperty</span></span>](Copy-ItemProperty.md)

[<span data-ttu-id="f62ce-183">Get-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-183">Get-ItemProperty</span></span>](Get-ItemProperty.md)

[<span data-ttu-id="f62ce-184">Move-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-184">Move-ItemProperty</span></span>](Move-ItemProperty.md)

[<span data-ttu-id="f62ce-185">New-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-185">New-ItemProperty</span></span>](New-ItemProperty.md)

[<span data-ttu-id="f62ce-186">Remove-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-186">Remove-ItemProperty</span></span>](Remove-ItemProperty.md)

[<span data-ttu-id="f62ce-187">Rename-Item</span><span class="sxs-lookup"><span data-stu-id="f62ce-187">Rename-Item</span></span>](Rename-Item.md)

[<span data-ttu-id="f62ce-188">Set-ItemProperty</span><span class="sxs-lookup"><span data-stu-id="f62ce-188">Set-ItemProperty</span></span>](Set-ItemProperty.md)

[<span data-ttu-id="f62ce-189">about_Providers</span><span class="sxs-lookup"><span data-stu-id="f62ce-189">about_Providers</span></span>](../Microsoft.PowerShell.Core/About/about_Providers.md)
